# choke

./: .gitignore  AGENTS.md  CHANGELOG.md  PRIVACY.md  README.md  pubspec.yaml  rust-toolchain.toml
.github/workflows/: release.yml  rust.yml
android/app/: build.gradle.kts  proguard-rules.pro
docs/: MUTATION_TESTING.md  SPEC.md  match-model-implementation.md  translations.md
docs/specs/: match-outcome.md  nostr-sdk-migration.md
ios/Runner.xcodeproj/: project.pbxproj
ios/Runner/Base.lproj/: LaunchScreen.storyboard
lib/: main.dart
lib/features/account/: account_screen.dart
lib/features/home/: home_screen.dart
lib/features/match/: create_match_screen.dart  match_control_screen.dart
lib/features/settings/: settings_screen.dart
lib/l10n/: app_en.arb  app_es.arb  app_ja.arb  app_pt.arb
lib/services/key_management/: key_manager.dart
lib/services/nostr/: nostr_service.dart
lib/shared/: nostr_relays.dart
lib/shared/theme/: app_theme.dart
linux/: CMakeLists.txt  io.protolayer.choke.desktop
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: crypto.rs  mod.rs  relay.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_choke.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_choke.podspec
rust_builder/windows/: CMakeLists.txt
test/: main_lifecycle_test.dart  widget_test.dart
test/support/: nostr_fakes.dart  relay_fakes.dart
tool/: coverage.sh  filter_lcov.dart
web/: manifest.json
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc
(+79 files in other folders)
