[package]
name = "rust_lib_choke"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
nostr = { version = "=0.44.4", default-features = false, features = ["std"] }
nostr-sdk = "=0.44.1"
tokio = { version = "1.52.3", features = ["rt"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
