[package]
name = "rust_lib_choke"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
nostr = { version = "=0.44.4", default-features = false, features = ["std"] }
nostr-sdk = "=0.44.1"
tokio = { version = "1.52.3", features = ["rt"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

# The crate ships inside the APK, so it is optimized for size rather than for
# the last few microseconds. Signing an event takes tens of microseconds either
# way; a referee cannot tell, and the download is on a phone at a gym.
# `panic = "abort"` is deliberately NOT set: flutter_rust_bridge unwinds across
# the FFI boundary to turn a Rust panic into a Dart exception.
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
